Moved ApacheCon logo to avoid overlap with _back_ butten on slides.

--- a/content/ApacheCon19/TrainingTalk/src/main/theme/apache.css
+++ b/content/ApacheCon19/TrainingTalk/src/main/theme/apache.css
@@ -390,7 +390,7 @@ body {
 
 .footer .right {
   position: absolute;
-  right: 80px;
+  right: 120px;
   bottom: 20px;
   text-align: center;
   width: 100%;
